fix: overlay z-index issues

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  z-index: 3000;
 }
 
 /* ===== NavBar ===== */
@@ -23,10 +22,10 @@ body {
   top: 0;
   left: 10%;
   right: 10%;
-  z-index: 999;
   border-radius: 0 0 25px 25px;
   background: rgb(255, 255, 255);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1001;
 }
 
 .mainNav a {
@@ -34,6 +33,7 @@ body {
   font-size: 1rem;
   margin: 0 10px;
 }
+
 
 .brand {
   display: flex;
@@ -416,6 +416,7 @@ body {
   font-size: 1.5rem;
   color: #000000;
 }
+
 .menu-toggle:hover {
   color: #6f4e3f;
 }
@@ -528,6 +529,7 @@ body {
   border-radius: 30px;
   position: relative;
   overflow: hidden;
+  z-index: 999;
 }
 
 #atas {
@@ -576,7 +578,7 @@ body {
   font-weight: 500;
   cursor: pointer;
   position: relative;
-  z-index: 2;
+  z-index: 1002;
 }
 
 .features-button::before {
@@ -1080,15 +1082,7 @@ footer p {
   margin-right: 10px;
 }
 
-.menu-toggle {
-  background: none;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  color: #333;
-  z-index: 9999;
-  position: relative;
-}
+
 
 #overlay {
   position: fixed;
@@ -1099,9 +1093,15 @@ footer p {
   background-color: rgba(0,0,0,0.5); /* semi transparan hitam */
   opacity: 0;
   transition: opacity 0.3s ease;
+  z-index: 1000;
+  display:none;
 }
 
 #overlay.active {
   opacity: 1;
   visibility: visible;
+}
+#overlay.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
